<resources>
    <string name="app_name">🛒Sabad</string>
    <string name="home_title">سبد</string>
    <string name="InsertProductName">نام کالا را درج کنید</string>
    <string name="Insert">درج</string>
    <string name="EditProduct">ویرایش</string>
    <string name="ListProducts">فهرست</string>
    <string name="Checkout">پایان خرید</string>
    <string name="Scan">پویش</string>
    <string name="ListInvoices">فهرست خریدها</string>
    <string name="ContinuePurchase">ادامه‌ی خرید</string>
    <string name="NameNeeded">نام را درج کنید</string>
    <string name="NewGroupGuide">راهنما* نیازمندی جدید درج شد، برای ویرایش یا حذف، می‌توانید انگشت خود را برروی نیازمندی نگه‌داشته یا هم‌اکنون دکمه‌ی ویرایش را بزنید. برای اطلاعات بیشتر اینجا را کلیک کنید</string>
    <string name="CategoryUsedName">این دسته‌بندی قبلا درج شده</string>
    <string name="CategoryQuickQueryHint">بخشی از نام کالا</string>
    <string name="Edit">ویرایش</string>
    <string name="GooglePlay">گوگل‌پلی</string>
    <string name="InvoiceSummary" formatted="false">تعداد اقلام انتخابی: %s قلم، %s عدد\nتعداد اقلام باقیمانده: %s قلم\nمبلغ کل: %s ریال</string>
    <string name="SelectGroup">نوع کالا را انتخاب کنید</string>
    <string name="SelectProduct">درج یا انتخاب برند</string>
    <string name="InvoiceItemFormDialogTitle">جزئیات کالا</string>
    <string name="Fee">فی هر واحد</string>
    <string name="FeeLastUpdate" formatted="false">قیمت در تاریخ %s</string>
    <string name="ChangeGroupAndNeededAndProductQuestion" formatted="false">%s در فهرست خرید نیست. آیا کالای اسکن‌شده به فهرست خرید افزوده شود؟</string>
    <string name="RegisterProduct">افزودن</string>
    <string name="PurchaseSummaryPickedItems" formatted="false">%s قلم %s عدد</string>
    <string name="PurchaseSummaryRemainedItems" formatted="false">%s قلم</string>
    <string name="SubtotalTextView" formatted="false">%s</string>
    <string name="BarcodeHint">بارکد</string>
    <string name="GroupEditHeader">ویرایش</string>
    <string name="PurchasableNameEntryHint">نام خریدنی را درج کنید</string>
    <string name="PurchasableRemoved" formatted="false">خریدنی با نام «%s» حذف شد</string>
    <string name="RemoteGroupGuide">برای حذف دکمه‌ی روبرو را نگه دارید</string>
    <string name="CheckoutPurchaseNeededGroupsCount" formatted="false">%s مورد</string>
    <string name="CheckoutPurchasePickedGroupsCount" formatted="false">%s مورد</string>
    <string name="CheckoutPurchaseRemainedGroupsCount" formatted="false">%s مورد</string>
    <string name="CheckoutPurchaseNoGroupsRemained">همه‌ی خریدنی‌ها را برداشته‌اید</string>
    <string name="UnitHint">واحد شمارش</string>
    <string name="CheckoutHeader">پایان خرید</string>
    <string name="PurchasableCount">تعداد خریدنی‌ها</string>
    <string name="PickedCount">تعداد برداشته‌شده</string>
    <string name="RemainedCount">تعداد مانده</string>
    <string name="Total">جمع مبلغ</string>
    <string name="FinishPurchase">پایان</string>
    <string name="InvoiceItemsCountSum" formatted="false">%s قلم</string>
    <string name="InvoiceItemsQuantitySum" formatted="false">%s کالا</string>
    <string name="InvoiceItemsPriceSum" formatted="false">مبلغ: %s</string>
    <string name="InvoicesFragmentTitle">فهرست صورتحساب‌ها</string>
    <string name="InvoiceLine1WithSeller" formatted="false">%s از %s</string>
    <string name="InvoiceLine1WithoutSeller" formatted="false">خرید %s</string>
    <string name="DeleteInvoice">حذف صورت‌حساب</string>
    <string name="InvoiceLine2" formatted="false">%s قلم، %s کالا، به مبلغ %s</string>
    <string name="InvoiceFragmentTitle">جزئیات صورت‌حساب</string>
    <string name="GroupStatusPicked">برداشته</string>
    <string name="GroupStatusNeeded">نیازمندی</string>
    <string name="GroupStatusNone">موجود</string>
    <string name="AboutSabadMenu">درباره‌ی 🛒سبد</string>
    <string name="AboutSabadTitle">درباره‌ی 🛒سبد</string>
    <string name="about_about">
        <![CDATA[
        اپ فهرست خرید  🛒سبد، به شما برای خرید ساده و آسان همه‌ی نیازمندی‌های‌تان یاری می‌رساند.\n\n
         هدف سبد، سادگی در تهیه‌ی فهرست خرید، سرعت در انتخاب کالاها و آگاهی از صورتحساب قبل از رسیدن به صندوق فروشگاه است
        ]]>
    </string>
    <string name="ReleaseComment">ویرایش %s</string>
    <string name="ShareTitle">همرسانی</string>
    <string name="FeedbackTitle">بازخورد</string>
    <string name="ParticipateTitle">مشارکت</string>
    <string name="RateAndReviewTitle">امتیاز و بررسی</string>
    <string name="ShareComment">در میان‌گذاری «سبد» با دوستان و آشنایان</string>
    <string name="FeedbackComment">ارسال نظر، انتقاد و پیشنهاد</string>
    <string name="ParticipateComment">کمک به «سبد» و افزودن اطلاعات کالاهای بازار</string>
    <string name="RateAndReviewComment">ثبت ستاره و نظر درباره‌ی «سبد» در %s</string>
    <string name="AboutTitle">درباره‌ی سبد</string>
    <string name="UpdatableComment">"آخرین ویرایش: %s "</string>
    <string name="UpdateCheckFailed">امکان بررسی به‌روزرسانی نیست</string>
    <string name="fa_twitter">\uF081</string>
    <string name="icon_eye_closed">&#xf070;</string>
    <string name="default_notification_channel_id">push-notifications-channel</string>
    <string name="FaraBank">فرابانک</string>
    <string name="invoice_item_form_dialog_title">جزئیات کالای برداشته</string>
    <string name="invoice_item_form_dialog_scan_barcode_hint">بارکد کالا را درج یا اسکن کنید</string>
    <string name="invoice_item_form_dialog_group_label">کالاگروه مد نظر</string>
    <string name="invoice_item_form_dialog_camera_permission_needed">برای استفاده از اسکنر، لازم است به «سبد» اجازه‌ی دسترسی به دوربین را بدهید</string>
    <string name="invoice_item_form_dialog_camera_permission_needed_unrational">بدون دلیل</string>
    <string name="invoice_item_form_dialog_name_placeholder">نام</string>
    <string name="invoice_item_form_dialog_quantity_placeholder">مقدار یا تعداد</string>
    <string name="invoice_item_form_dialog_price_amount_placeholder">قیمت</string>
    <string name="invoice_item_form_dialog_price_amount_no_unit_label">قیمت</string>
    <string name="invoice_item_form_dialog_price_amount_by_unit_label">قیمت هر %s</string>
    <string name="invoice_item_form_dialog_price_currency_label">ارز</string>
    <string name="invoice_item_form_dialog_convertible_unit_label">واحد</string>
    <string name="invoice_item_form_dialog_reference_price_template" formatted="false">هر %s: %s%s</string>
    <string name="invoice_item_form_dialog_reference_price_measurable_value" formatted="true">وزن یا حجم هر %s:</string>
    <string name="invoice_item_form_dialog_reference_quantity_unit_unacceptable" formatted="true">مقدار یا تعداد را مثبت درج کنید</string>
    <string name="invoice_item_form_dialog_reference_package_unit_unacceptable" formatted="true">وزن یا حجم را مثبت درج کنید</string>
    <string name="invoice_item_form_dialog_submit" formatted="true">افزودن</string>
    <string name="home_item_remove_dialog_title">تایید حذف یک قلم</string>
    <string name="home_item_remove_dialog_text">در صورت تایید، کالای %s حذف می‌شود</string>
    <string name="home_item_remove_dialog_action_remove_text">تایید، حذف</string>
    <string name="home_item_remove_dialog_action_skip_text">خیر، برگرد</string>
    <string name="purchase_summary_picked_items_count_label">تعداد اقلام برداشته</string>
    <string name="purchase_summary_picked_items_count_value">%s قلم، %s عدد</string>
    <string name="purchase_summary_remained_items_count_label">تعداد اقلام مانده</string>
    <string name="purchase_summary_remained_items_count_value">%s قلم</string>
    <string name="purchase_summary_price_label">جمع کل</string>
    <string name="category_quick_query_label">بخشی از نام کالا</string>
    <string name="category_edit_dialog_title">ویرایش دسته‌بندی</string>
    <string name="category_edit_name_entry_label">نام دسته‌بندی</string>
    <string name="category_edit_submit_command">ثبت</string>
    <string name="category_edit_cancel_command">لغو</string>
    <string name="category_edit_empty_name_error">نام را درج کنید</string>
    <string name="category_edit_duplicate_name_error">این دسته‌بندی هم‌اکنون وجود دارد</string>
    <string name="category_delete_dialog_title">حذف دسته‌بندی‌ها</string>
    <string name="category_delete_dialog_message">در صورت تایید، دسته‌بندی‌های زیر حذف می‌شوند</string>
    <string name="category_delete_and_more_template">و %s دسته‌بندی دیگر</string>
    <string name="category_delete_delete_command">حذف دسته‌بندی‌ها</string>
    <string name="category_delete_cancel_command">لغو</string>
    <string name="category_item_price_default">بدون قیمت</string>
    <string name="category_item_unit_default">واحد</string>
    <string name="category_item_name_default">«کالا»</string>
    <string name="item_form_persist_error">نام، بارکد یا مبلغ کالا را درج کنید</string>
    <string name="item_form_barcode_registered_for_other_category_title">بارکد تکراری و نامرتبط</string>
    <string name="item_form_barcode_registered_for_other_category_message_template">در حالی که %s کالا با بارکد اسکن شده (%s) ثبت شده، ولی هیچکدام در دسته‌بندی %s نیستند، لطفا تصمیم بگیرید که کالای جدیدی با همان بارکد ولی در دسته‌بندی جدید درج کنید یا بارکد دیگری را اسکن می‌کنید؟ </string>
    <string name="item_form_barcode_registered_for_other_category_create_product_label">درج کالای جدید</string>
    <string name="item_form_barcode_registered_for_other_category_skip_barcode_label">اسکن دوباره</string>
    <string name="categories_checkout_title">پایان خرید</string>
    <string name="categories_checkout_shop_placeholder">نام فروشگاه</string>
    <string name="categories_checkout_shop_label">نام فروشگاه</string>
    <string name="categories_checkout_checkout_command">پایان</string>
    <string name="categories_checkout_cancel_command">لغو</string>
    <string name="invoices_invoice_shop_label">"خرید از: "</string>
    <string name="invoices_invoice_unit_default">واحد</string>
    <string name="invoices_invoice_fee_label">هر %s: </string>
    <string name="invoices_invoice_total_label">"در مجموع: "</string>
    <string name="invoices_empty_invoices_label">هیچ خریدی وجود ندارد</string>
    <string name="invoices_invoiec_date_label">"در تاریخ: "</string>
    <string name="invoices_invoice_amount_label">"به مبلغ: "</string>
    <string name="invoice_item_form_multiple_currency_error">چندارزی ممکن نیست</string>
</resources>
