<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="5dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/GroupsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <farayan.sabad.ui.PurchaseSummaryComponent
        android:id="@+id/PurchaseSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <farayan.commons.UI.CommonTextInputLayout
            android:id="@+id/QueryLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/CategoryQuickQueryHint">

            <farayan.commons.UI.CommonTextInputEditText
                android:id="@+id/QueryEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text" />
        </farayan.commons.UI.CommonTextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/RegisterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Insert"
            app:icon="@drawable/ic_baseline_save_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/EditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Edit"
            android:visibility="gone"
            app:icon="@drawable/ic_baseline_edit_24" />
    </LinearLayout>

</LinearLayout>