<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <TextView
            style="@style/DialogHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CheckoutHeader" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/TopContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <farayan.commons.UI.CommonTextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/PurchasableCount">

                    <farayan.commons.UI.CommonTextInputEditText
                        android:id="@+id/PurchasableCountEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:gravity="center"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@drawable/textview_edittext" />
                </farayan.commons.UI.CommonTextInputLayout>

                <farayan.commons.UI.CommonTextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/PickedCount">

                    <farayan.commons.UI.CommonTextInputEditText
                        android:id="@+id/PickedCountEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:gravity="center"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@drawable/textview_edittext" />
                </farayan.commons.UI.CommonTextInputLayout>

                <farayan.commons.UI.CommonTextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/RemainedCount">

                    <farayan.commons.UI.CommonTextInputEditText
                        android:id="@+id/RemainedCountEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:gravity="center"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@drawable/textview_edittext" />
                </farayan.commons.UI.CommonTextInputLayout>

                <farayan.commons.UI.CommonTextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/Total">

                    <farayan.commons.UI.CommonTextInputEditText
                        android:id="@+id/PayableEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:gravity="center"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@drawable/textview_edittext" />
                </farayan.commons.UI.CommonTextInputLayout>

                <farayan.commons.UI.CommonTextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="فروشگاه">

                    <farayan.sabad.models.Store.StoreBox
                        android:id="@+id/StorePicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@drawable/textview_edittext" />
                </farayan.commons.UI.CommonTextInputLayout>

                <farayan.commons.UI.DateTimeBox
                    android:id="@+id/PurchasedDatePicker"
                    android:layout_marginHorizontal="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/TopContainer"
                android:layout_alignParentBottom="true"
                android:gravity="center_horizontal|bottom"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/CheckoutButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/FinishPurchase"
                    app:icon="@drawable/ic_noun_cashier"
                    app:iconGravity="textStart"
                    app:iconSize="24dp"
                    app:iconTint="#fff" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>